<resources>
    <string name="app_name">Toilet\'sGo</string>
    <string name="individual">I am an individual</string>
    <string name="proffescal">I am a professional</string>
    <string name="first_name"> First Name</string>
    <string name="last_name"> Last Name</string>
    <string name="email">  Email </string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_ac">Already have an account? Login</string>
    <string name="search_here">    Type a destination</string>
    <string name="enter_txt">enter search text</string>
    <string name="suggaction">Suggestion</string>
    <string name="price">Price</string>
    <string name="desc">Description</string>
    <string name="address">Address</string>
    <string name="my_last">MY LAST SEARCHES</string>
    <string name="my_location"> Within my country:  India </string>
    <string name="i_support">I support local travel!</string>
    <string name="anywere_in_world">Anywhere in the world</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">AIzaSyB90Ml5dpDCKI5-WuAGnkT-EHyCJrUR7ao</string>
    <string name="message">Message</string>
    <string name="trems_condition"><![CDATA[Terms & Condition\'s]]></string>
    <string name="share_your_views">Loorem ipsum dolor sit amet consecrate. In aliquot hac incident tongue tellus pellentesque vestibulum.</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="select_image">Select Image</string>
    <string name="permission_denied_boo">Permission Denied</string>
    <string name="empty">Empty</string>
    <string name="please_pick_image">please pick image</string>
    <string name="please_pick_another_image">please pick  Second image</string>
    <string name="please_pick_est_type">please select  Establishment type</string>
    <string name="please_wait">Please Wait</string>
    <string name="select_country">Select Country</string>
    <string name="select_gender">Select Gender</string>
    <string name="select">Select</string>
    <string name="save_changes">Save Changes</string>
    <string name="no_location">Location Turned Off</string>
    <string name="view_details">View Details</string>
    <string name="searching">Searching</string>
    <string name="request">Request</string>
    <string name="default_notification_channel_id">1</string>
    <string name="no_data_found">No Data Found</string>
    <string name="reservation">reservation</string>
    <string name="waiting">waiting</string>
    <string name="rating">Rating</string>
    <string name="range">Range</string>
    <string name="_0_km">0 km</string>
    <string name="_50_km">50 km</string>
    <string name="_0_rs">0 $ </string>
    <string name="_50_rs">50 $ </string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset_filters">Reset Filter</string>
    <string name="are_you_sure_to_reset">Are you sure you want to reset this filter ?</string>
    <string name="are_you_sure_to_accept">Are you sure you want to Accept this Booking ?</string>
    <string name="are_you_sure_to_reject">Are you sure you want to Reject this Booking ?</string>
    <string name="accept_booking">Accept Booking</string>
    <string name="reject_booking">Reject Booking</string>
    <string name="write">Write</string>
    <string name="notification">Notification</string>
    <string name="no_internet_connection_please_check_your_network">Connection Lost !</string>
    <string name="give_rating">Give Rating</string>
    <string name="welcome">Welcome,</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="type_of_establishment">Type of Establishment</string>
    <string name="is_toilets_available_on_the_premises">Is toilets available on the premises ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="verify">Verify</string>
    <string name="verify_establishment">Verify Identification TaxID of the establishment</string>
    <string name="register_successfull">Register Successful</string>
    <string name="register_unsuccessfull">Establishment Number Already Exist !</string>
    <string name="is_automatic">Automatic acceptance of users ?</string>
    <string name="is_access">Access for people with reduced mobility ?</string>
    <string name="is_usnt">Unstoppable nature of the toilets ?</string>
    <string name="toilet_name">Establishment Name</string>
    <string name="toilet_no">Establishment Number</string>
    <string name="don_t_have_a_account_register_now">Don\'t have a account register now</string>
    <string name="select_est">Select Establishment</string>
    <string name="datal"><![CDATA[<p><font color=#666666>Continue if you agree to our</font><font color=#5856F2>  <b><u>Terms & Conditions</u></b></font><font color=#666666> and the <u></font><b><font color=#5856F2>Privacy Policy</font></u></b></font></p>]]></string>
    <string name="i_aggree">I agree to the </string>
    <string name="tos">Term of services</string>
    <string name="and">and</string>
    <string name="privacy"> Privacy Policy</string>
    <string name="process_booking">Process Booking</string>
    <string name="scheduled_booking_s">Scheduled Booking\'s</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_booking">View Booking</string>
    <string name="review">Review</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="logout">logout</string>
    <string name="please_enter_your_email_we_will_send_a_new_password_on_this_email_address_you_can_use_that_password_for_login_and_change_the_password_according_to_you">Please enter your email we will send a new password on this email address you can use that password for login and change the password according to you</string>
    <string name="booking_successful">Booking Successful</string>
    <string name="tax_id">Tax ID</string>
    <string name="scan_qr">Scan QR</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_no">Account No</string>
    <string name="holder_name">Holder Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="branch">Branch</string>
    <string name="login">Login</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="you_rate_this_product_good">You rate this product: </string>
    <string name="name">Name</string>
    <string name="est_name">Est Name</string>
    <string name="booking_date">Booking Date</string>
    <string name="end_date">End Date</string>
    <string name="booking_qr">Booking Qr</string>
    <string name="payment_history">Payment History</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="payment">Payment</string>
    <string name="wallet">Wallet</string>

    <string name="title_action_reset">Reset</string>

    <string name="label_card_number">XXXX XXXX XXXX XXXX</string>
    <string name="label_expired_date">MM/YY</string>
    <string name="label_card_holder">CARD HOLDER</string>
    <string name="label_cvv_code">CVV CODE</string>

    <string name="hint_card_number">16-DIGIT CARD NUMBER</string>
    <string name="hint_expired_date">EXPIRED DATE</string>
    <string name="hint_card_holder">CARD HOLDER</string>
    <string name="hint_cvv_code">CVV CODE</string>

    <string name="label_secure_submission">Secure Submission</string>
</resources>
