<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.LoginSignup.SignupActivity"
        android:background="@color/back">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/ivAddPost"

                    android:layout_width="@dimen/_98sdp"
                    android:layout_height="@dimen/_98sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:src="@drawable/camera_with_bg">

                    </ImageView>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:src="@drawable/user"
                        app:civ_border_color="@color/white"
                        app:civ_border_overlay="true"

                        app:civ_border_width="@dimen/_4sdp"/>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/background_edit"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/hint_text_color"
                        android:textColorHint="@color/hint_text_color"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:id="@+id/edtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/background_edit"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/hint_text_color"
                        android:textColorHint="@color/hint_text_color"
                        android:textSize="@dimen/_12sdp" />


                </LinearLayout>

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/background_edit"
                    android:fontFamily="@font/poppinsregular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/hint_text_color"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/_12sdp" />
                <EditText
                    android:id="@+id/edtpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/background_edit"
                    android:fontFamily="@font/poppinsregular"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/hint_text_color"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/edtGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/background_edit"
                    android:drawableRight="@drawable/down_arrow"
                    android:fontFamily="@font/poppinsregular"
                    android:hint="@string/gender"
                    android:inputType="none"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/hint_text_color"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/edtCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/background_edit"
                    android:drawableRight="@drawable/down_arrow"
                    android:fontFamily="@font/poppinsregular"
                    android:hint="@string/country"
                    android:inputType="none"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/hint_text_color"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/_12sdp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:outlineProvider="background"
                    android:outlineSpotShadowColor="@color/white"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="@dimen/_10sdp"
                    app:rippleColor="@color/gray_two" />

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_google"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/_3sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_bold"
                        android:outlineProvider="background"
                        android:outlineSpotShadowColor="@color/white"
                        android:padding="@dimen/_10sdp"
                        android:drawableLeft="@drawable/google_icn"
                        android:drawablePadding="@dimen/_15sdp"
                        android:text="@string/google"
                        android:textSize="@dimen/_12sdp"                         android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:backgroundTint="#FF3737"
                        app:cornerRadius="@dimen/_10sdp"
                        app:rippleColor="@color/gray_two"
                        />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:outlineProvider="background"
                    android:outlineSpotShadowColor="@color/white"
                    android:padding="@dimen/_10sdp"
                    android:drawableLeft="@drawable/facebook_icn"
                    android:drawablePadding="@dimen/_15sdp"
                    android:text="@string/facebook"
                    android:textSize="@dimen/_12sdp"                         android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:backgroundTint="#4D94FF"
                    app:cornerRadius="@dimen/_10sdp"
                    app:rippleColor="@color/gray_two"
                    />
                <LinearLayout
                    android:id="@+id/go_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    >
                    <TextView
                        android:padding="@dimen/_10sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/already_ac"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
