<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                style="@style/Widget.Design.BottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_Address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/verify_establishment"
                        android:textAlignment="center"
                        android:textColor="@color/texts"
                        android:textSize="@dimen/_12sdp" />
                    <EditText
                        android:id="@+id/edt_ext_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_8sdp"
                        android:background="@drawable/background_edit"
                        android:digits="0123456789"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/toilet_no"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/hint_text_color"
                        android:textColorHint="@color/hint_text_color"
                        android:textSize="@dimen/_12sdp"
                        android:autofillHints="" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:outlineProvider="background"
                    android:outlineSpotShadowColor="@color/white"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="@dimen/_10sdp"
                    app:rippleColor="@color/new_primarey" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>